--- a/932986490/dominion/Makefile
+++ b/932986490/dominion/Makefile
@@ -1,4 +1,4 @@
-CFLAGS = -Wall -fpic -coverage -lm
+CFLAGS =  -fpic -coverage -lm
 
 rngs.o: rngs.h rngs.c
 	gcc -c rngs.c -g  $(CFLAGS)
@@ -24,11 +24,45 @@ testAll: dominion.o testSuite.c
 interface.o: interface.h interface.c
 	gcc -c interface.c -g  $(CFLAGS)
 
-runtests: testDrawCard 
+runtests: testDrawCard
 	./testDrawCard &> unittestresult.out
 	gcov dominion.c >> unittestresult.out
 	cat dominion.c.gcov >> unittestresult.out
 
+unitTest1: unittest1.c dominion.o rngs.o
+	gcc  -o unitTest1 -g  unittest1.c dominion.o rngs.o $(CFLAGS)
+
+unitTest2: unittest2.c dominion.o rngs.o
+	gcc  -o unitTest2 -g  unittest2.c dominion.o rngs.o $(CFLAGS)
+
+unitTest3: unittest3.c dominion.o rngs.o
+	gcc  -o unitTest3 -g  unittest3.c dominion.o rngs.o $(CFLAGS)
+
+unitTest4: unittest4.c dominion.o rngs.o
+	gcc  -o unitTest4 -g  unittest4.c dominion.o rngs.o $(CFLAGS)
+
+cardTest1: cardtest1.c dominion.o rngs.o
+	gcc  -o cardTest1 -g  cardtest1.c dominion.o rngs.o $(CFLAGS)
+
+cardTest2: cardtest2.c dominion.o rngs.o
+	gcc  -o cardTest2 -g  cardtest2.c dominion.o rngs.o $(CFLAGS)
+
+cardTest3: cardtest3.c dominion.o rngs.o
+	gcc  -o cardTest3 -g  cardtest3.c dominion.o rngs.o $(CFLAGS)
+
+cardTest4: cardtest4.c dominion.o rngs.o
+	gcc  -o cardTest4 -g  cardtest4.c dominion.o rngs.o $(CFLAGS)
+
+unittestresults.out: unitTest1 unitTest2 unitTest3 unitTest4 cardTest1 cardTest2 cardTest3 cardTest4
+	./unitTest1 &> unittestresults.out
+	./unitTest2 >> unittestresults.out
+	./unitTest3 >> unittestresults.out
+	./unitTest4 >> unittestresults.out
+	./cardTest1 >> unittestresults.out
+	./cardTest2 >> unittestresults.out
+	./cardTest3 >> unittestresults.out
+	./cardTest4 >> unittestresults.out
+	gcov dominion.c >> unittestresults.out
 
 player: player.c interface.o
 	gcc -o player player.c -g  dominion.o rngs.o interface.o $(CFLAGS)
